Update index.html to link new positions.css and replace about section with boxes

--- a/css intro/index.html
+++ b/css intro/index.html
@@ -4,21 +4,15 @@
 <head>
     <title>Rihan</title>
     <!-- custom css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="positions.css">
 </head>
 
 <body>
-    <!-- about -->
-    <div id="about">
-        <img src="https://i.pinimg.com/736x/fe/66/e4/fe66e4eff34d3f0559bbb3b1b6870d92.jpg" alt="rehaan">
-        <h2>About Rehaan</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur nisi sed, ducimus dolor nam voluptatem,
-            blanditiis labore quidem dolore odio repellendus. Fugiat molestiae qui dolorum veritat Lorem ipsum dolor sit
-            amet consectetur, adipisicing elit. Dolorum pariatur recusand is ullam, voluptate
-            blanditiis labore quidem dolore odio repellendus. Fugiat molestiae qui dolorum veritat Lorem ipsum dolor sit
-            amet consectetur, adipisicing elit. Dolorum pariatur recusand is ullam, voluptate
-            commodi consectetur fugit ab vel officiis, enim sed eius, eos magni in.</p>
-    </div>
+
+    <div class="box b1">1</div>
+    <div class="box b2">2</div>
+    <div class="box b3">3 </div>
+
 </body>
 
 </html>
