Add navigation bar to index.html and update positions.css for layout adjustments

--- a/css intro/index.html
+++ b/css intro/index.html
@@ -9,6 +9,17 @@
 
 <body>
 
+    <div class="nav">
+        <a href="index.html">
+            <h2>My Website</h2>
+        </a>
+        <ul>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+        </ul>
+    </div>
+
+
     <div class="box b1">1</div>
     <div class="box b2">2</div>
     <div class="box b3">3 </div>
